# waybackmachine-cdx

./: .pylintrc  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-app.yml
cdx/: __init__.py  cdx.py  cdx_iterator.py
test/: test_cdx.py
waybackmachine_cdx/: __init__.py  cdx.py  cdx_iterator.py
