[tool.poetry]
name = "waybackmachine-cdx"
version = "0.1.0"
description = ""
authors = ["Arseniy Shchepetnov <a.shchepetnov@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.7.2,<4.0"
pandas = ">=1.3.5"
requests = ">=2.28.1"

[tool.poetry.dev-dependencies]
pylint = ">=2.15.2"
autopep8 = ">=1.7.0"
mypy = ">=0.971"
pytest = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
