[tool.poetry]
name = "waybackmachine-cdx"
version = "0.1.0"
description = ""
authors = ["Arseniy Shchepetnov <a.shchepetnov@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.7.2,<3.10"
pip = ">=22.2.2"
setuptools=">=65.3.0"
wheel=">=0.37.1"
numpy = ">=1.21.6"
pandas = ">=1.3.5"
requests = ">=2.28.1"

[tool.poetry.dev-dependencies]
pylint = ">=2.15.2"
autopep8 = ">=1.7.0"
mypy = ">=0.971"
pytest = ">=7.1.3"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
